# SW

APP/: .gitignore  README.md
APP/SKILLS/APP-CR/: SKILL.md
APP/SKILLS/APP-CR/agents/: openai.yaml
APP/SKILLS/APP-ENG/: SKILL.md
APP/SKILLS/APP-ENG/agents/: openai.yaml
APP/SKILLS/APP-init/: SKILL.md
APP/SKILLS/APP-init/agents/: openai.yaml
APP/SKILLS/APP-init/scripts/: run_app_init.sh
APP/SKILLS/APP-mgr/: SKILL.md
APP/SKILLS/APP-mgr/agents/: openai.yaml
APP/SKILLS/mobile-linear-planner/: SKILL.md
APP/SKILLS/mobile-linear-planner/agents/: openai.yaml
APP/android/: keystore.properties.template  settings.gradle.kts
APP/android/app/: build.gradle.kts  proguard-rules.pro
APP/android/app/src/main/: AndroidManifest.xml
APP/android/app/src/main/java/com/airhealth/app/: ActionGateAnalytics.kt  ActionLockState.kt  ConsultDirectoryState.kt  EntitlementState.kt  EntitlementSurfaceState.kt  FatMeasurementFlowState.kt  FeatureHubRouteState.kt  GoalState.kt  HealthExportState.kt  HistoryViewState.kt  MainActivity.kt  MeasurementRecoveryState.kt  MeasurementSessionCoordinator.kt  OralMeasurementFlowState.kt  PairingFlowState.kt  PairingRecoveryAnalytics.kt  SessionHistoryState.kt  SessionSyncQueueState.kt  SuggestionState.kt
APP/android/app/src/test/java/com/airhealth/app/: ActionGateAnalyticsTest.kt  ActionLockStateTest.kt  ConsultDirectoryCacheStateTest.kt  EntitlementStateTest.kt  EntitlementSurfaceStateTest.kt  FatMeasurementFlowStateTest.kt  FeatureHubRouteStateTest.kt  GoalCacheStateTest.kt  HealthExportStateTest.kt  HistoryViewStateTest.kt  MeasurementSessionCoordinatorTest.kt  MeasurementTerminalCoverageIntegrationTest.kt  OralMeasurementFlowStateTest.kt  PairingFlowStateTest.kt  PairingRecoveryAnalyticsTest.kt  SessionHistoryStateTest.kt  SessionSyncQueueStateTest.kt  SuggestionCacheStateTest.kt
APP/ios/: ExportOptions.plist.template  Podfile  project.yml
APP/ios/AirHealthApp.xcodeproj/: project.pbxproj
APP/ios/AirHealthApp.xcodeproj/xcshareddata/xcschemes/: AirHealthApp.xcscheme
APP/ios/AirHealthApp/App/: AirHealthApp.swift  AppShellStore.swift  AppShellView.swift  ConsultDirectoryState.swift  EntitlementState.swift  FatMeasurementFlow.swift  GoalState.swift  HealthExportState.swift  HistoryViewState.swift  MeasurementRecoveryState.swift  MeasurementSessionCoordinator.swift  OralMeasurementFlow.swift  PairingSetupFlow.swift  SessionHistoryState.swift  SessionSyncQueueState.swift  SuggestionState.swift
APP/ios/AirHealthApp/Features/: README.md
APP/scripts/: build_mobile_bundles.sh
APP/shared/: README.md
Architecture/: SKILL.md  Software_Architecture_Spec_v0.1.html  Software_Architecture_Spec_v0.1.md  Software_Architecture_Spec_v0.2.md
Architecture/agents/: openai.yaml
BE/backend-linear-planner/: SKILL.md
BE/backend-linear-planner/agents/: openai.yaml
FW/: README.md  fw-mgr.rpt  initialize.rpt
FW/SKILLS/FW-CR/: SKILL.md
FW/SKILLS/FW-CR/agents/: openai.yaml
FW/SKILLS/FW-ENG/: SKILL.md
FW/SKILLS/FW-ENG/agents/: openai.yaml
FW/SKILLS/FW-mgr/: SKILL.md
FW/SKILLS/FW-mgr/agents/: openai.yaml
FW/SKILLS/firmware-linear-planner/: SKILL.md
FW/SKILLS/firmware-linear-planner/agents/: openai.yaml
FW/SKILLS/fw-init/: SKILL.md
FW/SKILLS/fw-init/agents/: openai.yaml
FW/SKILLS/fw-init/scripts/: run_fw_init.sh
FW/Source/: CMakeLists.txt
FW/Source/app/: CMakeLists.txt  prj.conf
FW/Source/app/boards/: nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay
FW/Source/app/src/: device_info_service.cpp  device_info_service.hpp  main.cpp
FW/Source/include/airhealth/fw/: device_info.hpp  factory_auth.hpp  factory_bundle.hpp  fat.hpp  led_button.hpp  low_power.hpp  oral.hpp  ota.hpp  pairing.hpp  routing.hpp  session.hpp  session_contract.hpp  session_journal.hpp
FW/Source/src/: device_info.cpp  factory_auth.cpp  factory_bundle.cpp  fat.cpp  led_button.cpp  low_power.cpp  oral.cpp  ota.cpp  pairing.cpp  pairing_file_store.cpp  routing.cpp  session.cpp  session_contract.cpp  session_journal.cpp
FW/Source/tests/: device_info_test.cpp  factory_auth_test.cpp  factory_bundle_test.cpp  fat_test.cpp  led_button_test.cpp  low_power_test.cpp  oral_test.cpp  ota_test.cpp  pairing_test.cpp  routing_test.cpp  session_contract_test.cpp  session_journal_test.cpp  session_test.cpp
FW/firmware-linear-planner/: SKILL.md  tickets.csv
FW/firmware-linear-planner/agents/: openai.yaml
FW/vendor-sdk/: .gitignore  README.md
feature-design/: Backend_Feature_Design_v0.1.md  Backend_Feature_Design_v0.2.md  Feature_Design_Spec_v0.1.md  Firmware_Feature_Design_v0.1.md  Firmware_Feature_Design_v0.2.md  Mobile_Feature_Design_v0.1.md  Mobile_Feature_Design_v0.2.md  Mobile_Figma_Design.md  SKILL.md  Shared_Integration_Appendix_v0.1.md  Shared_Integration_Appendix_v0.2.md
feature-design/agents/: openai.yaml
